Fixed spacing of button for mobiles

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -672,7 +672,7 @@ body {
 
 @media (max-width: 610px) {
   .oppia-subscription-button {
-    margin: 0;
+    margin-top: 10px;
   }
 }
 
